test/classes/deitz/test_badclass1.good
test_badclass1.chpl:4 ERROR: syntax error
yytext is: f
