test/classes/deitz/test_badclass1.chpl
class foo {
  var i : int;
  var f : real;
  f = 2.2;
}

var x : foo = new foo();

x.i = -1;
x.f = 3.1415;

writeln("x: (", x.i, ", ", x.f, ")");

var y : foo = x;

writeln("y: (", y.i, ", ", y.f, ")");

y.i = -2;

writeln("x: (", x.i, ", ", x.f, ")");
